--- a/筛膜数据处理test.ipynb
+++ b/筛膜数据处理test.ipynb
@@ -231,7 +231,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "# 再进行膜号的分别输出\n",
+    "n = 1\n",
+    "m = 1\n",
+    "j = 0\n",
+    "for i in range(index + 1):\n",
+    "    if d[i][0] in wrong_pos:\n",
+    "        sheet2.write(n, 0, d[i][0])\n",
+    "        for j in range(len(d[i][1])):\n",
+    "            sheet2.write(n, j + 1, d[i][1][j], styleWrongPos)\n",
+    "        n = n + 1\n",
+    "    elif len(d[i][1]) != 4:\n",
+    "        sheet2.write(n, 0, d[i][0])\n",
+    "        for j in range(len(d[i][1])):\n",
+    "            sheet2.write(n, j + 1, d[i][1][j], styleMoreOrLess)\n",
+    "        n = n + 1\n",
+    "    else:\n",
+    "        sheet1.write(m, 0, d[i][0])\n",
+    "        for j in range(len(d[i][1])):\n",
+    "            sheet1.write(m, j + 1, d[i][1][j])\n",
+    "        tmp = [float(x) for x in d[i][1]]\n",
+    "        mean = np.mean(tmp)\n",
+    "        std = np.std(tmp)\n",
+    "        sheet1.write(m, j + 2, mean)\n",
+    "        sheet1.write(m, j + 3, std / mean)\n",
+    "        m = m + 1       \n",
+    "                \n",
+    "#导出工作簿\n",
+    "wb.save('数据处理.xls')"
+   ]
   }
  ],
  "metadata": {
