debug one cell, need help

--- a/筛膜数据处理test.ipynb
+++ b/筛膜数据处理test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,51 +148,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 1941\n",
-      "8 1969\n",
-      "1 1942\n",
-      "4 1958\n",
-      "4 1937\n",
-      "1 19343\n",
-      "[(1970, [0.0329, 0.0494, 0.0557, 0.0515]), (1941, [0.056, 0.0542, 0.0564, 0.0567]), (1969, [0.0633, 0.0554, 0.0521, 0.0582, 0.0745, 0.0671, 0.0652, 0.0656]), (1942, [0.0656]), (1958, [0.1394, 0.0675, 0.0677, 0.0715]), (1937, [0.0699, 0.0627, 0.0688, 0.0713]), (19343, [0.0537]), (1934, [0.1119, 0.0516, 0.059])]\n"
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(index):\n",
+    "    print(len(d[i][1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "12\n",
+      "9\n",
+      "9\n",
+      "8\n",
+      "5\n",
+      "4\n",
+      "1 3 hi!\n",
+      "[(1970, [0.0329, 0.0494, 0.0557, 0.0515]), (1941, [0.056, 0.0542, 0.0567, 0.0564]), (1969, [0.0633, 0.0554, 0.0521, 0.0582]), (1942, [0.0656, 0.0652, 0.0671, 0.0745]), (1958, [0.1394, 0.0675, 0.0677, 0.0715]), (1937, [0.0699, 0.0627, 0.0688, 0.0713]), (19343, [0]), (1934, [0.1119, 0.0516, 0.059, 0.0537])]\n"
      ]
     }
    ],
    "source": [
     "\n",
     "# 先进行错误膜号的修改\n",
-    "for i in range(index):\n",
+    "for i in range(len(d)):\n",
     "    if i > 0:        # 输出错号,修改录入出错的情况再进行录入\n",
     "        a = len(d[i - 1][1])\n",
     "        b = len(d[i][1])\n",
-    "        print(b,d[i][0])\n",
-    "        if a + b == 4:                      # 修改录入错误的膜号\n",
-    "            for k in range(b):\n",
+    "        print(a+b)\n",
+    "        if a + b == 4:                # 修改录入错误的膜号\n",
+    "            print(a,b,'hi!')\n",
+    "            for k in range(a - 1, -1 , -1):\n",
     "                d[i][1].append(d[i - 1][1][k])\n",
-    "                d[i - 1][1].remove(d[i - 1][1][k])\n",
+    "                del d[i - 1][1][k]\n",
     "                d[i - 1][1].append(0)\n",
     "                wrong_pos.add(d[i - 1][0])\n",
     "        elif a > b and a + b == 8:          # 修改忘记改号的膜号\n",
-    "            for k in range(4,a):\n",
+    "            for k in range(a - 1,3,-1):\n",
     "                d[i][1].append(d[i - 1][1][k])\n",
-    "                d[i - 1][1].remove(d[i - 1][1][k])\n",
+    "               # d[i - 1][1].remove(d[i - 1][1][k]) remove是对数值去除\n",
+    "                del d[i - 1][1][k]\n",
     "        elif a == 8 and b == 1:             # 修改另一种忘记改号的情况\n",
-    "            for k in range(4,a):\n",
+    "            for k in range(a - 1,3,-1):\n",
     "                d[i][1].append(d[i - 1][1][k])\n",
-    "                d[i][1].remove(d[i][1][0])\n",
-    "print(d)"
+    "                del d[i - 1][1][k]\n",
+    "            del d[i][1][0]\n",
+    "print(d)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,6 +253,32 @@
     "                \n",
     "#导出工作簿\n",
     "wb.save('数据处理.xls')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 2, 1, 2, 1, 3, 5, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,1,2,1,2,1,3,5,8]\n",
+    "del a[2]\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO：对多个list中的指定数值进行排序"
    ]
   },
   {
@@ -231,37 +286,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "# 再进行膜号的分别输出\n",
-    "n = 1\n",
-    "m = 1\n",
-    "j = 0\n",
-    "for i in range(index + 1):\n",
-    "    if d[i][0] in wrong_pos:\n",
-    "        sheet2.write(n, 0, d[i][0])\n",
-    "        for j in range(len(d[i][1])):\n",
-    "            sheet2.write(n, j + 1, d[i][1][j], styleWrongPos)\n",
-    "        n = n + 1\n",
-    "    elif len(d[i][1]) != 4:\n",
-    "        sheet2.write(n, 0, d[i][0])\n",
-    "        for j in range(len(d[i][1])):\n",
-    "            sheet2.write(n, j + 1, d[i][1][j], styleMoreOrLess)\n",
-    "        n = n + 1\n",
-    "    else:\n",
-    "        sheet1.write(m, 0, d[i][0])\n",
-    "        for j in range(len(d[i][1])):\n",
-    "            sheet1.write(m, j + 1, d[i][1][j])\n",
-    "        tmp = [float(x) for x in d[i][1]]\n",
-    "        mean = np.mean(tmp)\n",
-    "        std = np.std(tmp)\n",
-    "        sheet1.write(m, j + 2, mean)\n",
-    "        sheet1.write(m, j + 3, std / mean)\n",
-    "        m = m + 1       \n",
-    "                \n",
-    "#导出工作簿\n",
-    "wb.save('数据处理.xls')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
