--- a/筛膜数据处理test.ipynb
+++ b/筛膜数据处理test.ipynb
@@ -283,6 +283,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [[1, 100, 2] , [3, 99, 4], [5, 98, 6]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(a)):\n",
+    "    for j in range(i + 1, len(a)):\n",
+    "        if a[i][1] > a[j][1]:\n",
+    "            tmp = a[i]\n",
+    "            a[i] = a[j]\n",
+    "            a[j] = tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[5, 98, 6], [3, 99, 4], [1, 100, 2]]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -305,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
