--- a/不合格膜号.ipynb
+++ b/不合格膜号.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,11 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# 行数\n",
     "row = sheet.nrows\n",
     "\n",
@@ -53,17 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(1970, [0.0329, 0.0494, 0.0557, 0.0515, 0.0564, 0.0567]), (1941, [0.056, 0.0542]), (1969, [0.0633, 0.0554, 0.0521, 0.0582, 0.0745, 0.0671, 0.0652, 0.0656]), (1942, [0.0643]), (1958, [0.1394, 0.0675, 0.0677, 0.0715, 0.0713]), (1937, [0.0699, 0.0627, 0.0688]), (19343, [0.0537]), (1934, [0.1119, 0.0516, 0.059])]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# 数据处理、转置、编组\n",
@@ -80,12 +71,12 @@
     "                    index = index + 1\n",
     "                else:\n",
     "                    d[index][1].append(rValue)\n",
-    "print(d)                    "
+    "                    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,68 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "# 将处理好的数据保存\n",
-    "# 创建工作簿\n",
-    "wb = Workbook()\n",
-    "sheet1 = wb.add_sheet('数据处理')\n",
-    "sheet2 = wb.add_sheet('出错数据')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# 标色出错膜号规则\n",
-    "styleWrongPos = xlwt.easyxf('pattern: pattern solid, fore_colour ocean_blue; font: bold on;')\n",
-    "styleMoreOrLess = xlwt.easyxf('pattern: pattern solid, fore_colour red; font: bold on;')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# 写入抬头\n",
-    "sheet1.write(0, 0, '膜号')\n",
-    "sheet1.write(0, 1, 'RI值')\n",
-    "sheet1.write(0, 2, 'RI值')\n",
-    "sheet1.write(0, 3, 'RI值')\n",
-    "sheet1.write(0, 4, 'RI值')\n",
-    "sheet1.write(0, 5, 'AVG')\n",
-    "sheet1.write(0, 6, 'CV')\n",
-    "sheet2.write(0, 0, '膜号')\n",
-    "sheet2.write(0, 1, 'RI值')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4 1941\n",
-      "8 1969\n",
-      "1 1942\n",
-      "4 1958\n",
-      "4 1937\n",
-      "1 19343\n",
-      "[(1970, [0.0329, 0.0494, 0.0557, 0.0515]), (1941, [0.056, 0.0542, 0.0564, 0.0567]), (1969, [0.0633, 0.0554, 0.0521, 0.0582, 0.0745, 0.0671, 0.0652, 0.0656]), (1942, [0.0656]), (1958, [0.1394, 0.0675, 0.0677, 0.0715]), (1937, [0.0699, 0.0627, 0.0688, 0.0713]), (19343, [0.0537]), (1934, [0.1119, 0.0516, 0.059])]\n"
-     ]
-    }
-   ],
    "source": [
     "\n",
     "# 先进行错误膜号的修改\n",
@@ -191,38 +123,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1970, [4.88, 8.77, 0.0575, 1.7484, 4.74, 8.81, 0.1111, 2.2507, 4.78, 8.91, 0.0972, 1.7441, 4.74, 8.87, 0.1048, 2.0371, 4.74, 8.84, 0.1129, 2.0003, 4.64, 8.81, 0.0918, 1.6197]), (1941, [4.74, 8.84, 0.1023, 1.8275, 4.78, 8.87, 0.1086, 2.0044]), (1969, [4.71, 8.81, 0.1059, 1.6731, 4.74, 8.84, 0.0896, 1.6187, 4.84, 8.94, 0.0914, 1.7548, 4.88, 8.94, 0.0982, 1.6886, 4.61, 8.81, 0.1388, 1.8626, 4.61, 8.77, 0.1326, 1.9753, 4.61, 8.74, 0.1752, 2.6856, 4.61, 8.77, 0.1433, 2.1827]), (1942, [4.61, 8.77, 0.1403, 2.1807]), (1958, [4.54, 8.77, 0.256, 1.836, 4.57, 8.7, 0.152, 2.2521, 4.88, 9.01, 0.1597, 2.3592, 4.81, 9.01, 0.1387, 1.94, 4.61, 8.77, 0.1229, 1.7235]), (1937, [4.67, 8.77, 0.1369, 1.9599, 4.84, 8.97, 0.1368, 2.1837, 4.88, 8.97, 0.1303, 1.8929]), (19343, [4.67, 8.81, 0.0979, 1.8221]), (1934, [4.74, 8.87, 0.0732, 0.6547, 5.01, 9.11, 0.12, 2.3271, 4.98, 9.08, 0.1171, 1.9851])]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 再进行膜号的分别输出\n",
-    "n = 1\n",
-    "m = 1\n",
-    "j = 0\n",
-    "for i in range(index + 1):\n",
-    "    if d[i][0] in wrong_pos:\n",
-    "        sheet2.write(n, 0, d[i][0])\n",
-    "        for j in range(len(d[i][1])):\n",
-    "            sheet2.write(n, j + 1, d[i][1][j], styleWrongPos)\n",
-    "        n = n + 1\n",
-    "    elif len(d[i][1]) != 4:\n",
-    "        sheet2.write(n, 0, d[i][0])\n",
-    "        for j in range(len(d[i][1])):\n",
-    "            sheet2.write(n, j + 1, d[i][1][j], styleMoreOrLess)\n",
-    "        n = n + 1\n",
-    "    else:\n",
-    "        sheet1.write(m, 0, d[i][0])\n",
-    "        for j in range(len(d[i][1])):\n",
-    "            sheet1.write(m, j + 1, d[i][1][j])\n",
-    "        tmp = [float(x) for x in d[i][1]]\n",
-    "        mean = np.mean(tmp)\n",
-    "        std = np.std(tmp)\n",
-    "        sheet1.write(m, j + 2, mean)\n",
-    "        sheet1.write(m, j + 3, std / mean)\n",
-    "        m = m + 1       \n",
-    "                \n",
-    "#导出工作簿\n",
-    "wb.save('数据处理.xls')"
+    "\n",
+    "# 用新的dist录入C带T带的值和位置\n",
+    "b = []\n",
+    "value = []\n",
+    "index = -1\n",
+    "j = 2\n",
+    "for i in range(row):\n",
+    "    cur = sheet.cell_value(i, j)\n",
+    "    if type(cur) == float:\n",
+    "        for k in range(1, 5):\n",
+    "            rValue = sheet.cell_value(i, j + k)\n",
+    "            if type(rValue) == float or type(rValue) == int:\n",
+    "                if index < 0 or d[index][0] != int(cur):\n",
+    "                    b.append((int(cur), [rValue]))\n",
+    "                    index = index + 1\n",
+    "                else:\n",
+    "                    b[index][1].append(rValue)\n",
+    "                 "
    ]
   },
   {
